# differentiator

./: CMakeLists.txt  main.cpp  operators.inc
include/: config.h  differentiator.h  dump.h  hash.h  optimizer.h  parser.h  tex.h  tree.h
src/: differentiator.cpp  dump.cpp  optimizer.cpp  parser.cpp  tex.cpp  tree.cpp
